--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: cimg/rust:1.58
     steps:
       - checkout
-      - run: git clone $(<repo) repo
+      - run: git clone $(<repo) source
 
 workflows:
   build:
