correct no_output_timeout

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,10 +25,10 @@ jobs:
           rm -rf /tmp/artifacts
           mkdir -p /tmp/artifacts
       - run:
-          | # redirecting all output to /dev/null should allow no_output_timeout to timeout generally
-          cd "source/$(<./path)"
-          2>/dev/null 1>/dev/null ./near-verify.sh /tmp/artifacts/out.wasm
-        no_output_timeout: 5m
+          command: | # redirecting all output to /dev/null should allow no_output_timeout to timeout generally
+            cd "source/$(<./path)"
+            2>/dev/null 1>/dev/null ./near-verify.sh /tmp/artifacts/out.wasm
+          no_output_timeout: 5m
       - store_artifacts:
           path: /tmp/artifacts/out.wasm
           destination: out
