debug near-verify.sh

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,10 @@ jobs:
           rm -rf /tmp/artifacts
           mkdir -p /tmp/artifacts
       - run:
-          command: | # redirecting all output to /dev/null should allow no_output_timeout to timeout generally
+          # redirecting all output to /dev/null should allow no_output_timeout to timeout generally
+          command: |
             cd "source/$(<./path.txt)"
-            2>/dev/null 1>/dev/null ./near-verify.sh /tmp/artifacts/out.wasm
+            ./near-verify.sh /tmp/artifacts/out.wasm
           no_output_timeout: 5m
       - store_artifacts:
           path: /tmp/artifacts/out.wasm
