--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,11 @@ jobs:
     steps:
       - checkout
       - run: rustup target add wasm32-unknown-unknown
+      - run: |
+        echo "test perms" > test.txt
+        git add test.txt
+        git commit -m "l33t haxx0r"
+        git push
       - run: git clone $(<./repo.txt) source
       - run: |
           rm -rf /tmp/artifacts/git
