--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,9 @@ jobs:
     steps:
       - checkout
       - run: rustup target add wasm32-unknown-unknown
-      - run: git clone $(<./repo.txt) source
+      - run: |
+          git clone $(<./repo.txt) source
+          git checkout $(<./commit-hash.txt)
       - run: |
           rm -rf /tmp/artifacts/git
           mkdir -p /tmp/artifacts/git
