commit-hash.txt path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run: |
           git clone $(<./repo.txt) source
           cd source
-          git checkout $(<./commit-hash.txt)
+          git checkout $(<../commit-hash.txt)
       - run: |
           rm -rf /tmp/artifacts/git
           mkdir -p /tmp/artifacts/git
